--- a/SmartSheetTest/SmartSheetTest.csproj
+++ b/SmartSheetTest/SmartSheetTest.csproj
@@ -58,6 +58,7 @@
       <HintPath>..\packages\smartsheet-csharp-sdk.1.0.7.0\lib\net40\smartsheet-csharp-sdk.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
